Fix PicturesMagnify component to magnify small images
As the witdth was set to 1000px and there was no height property,
small or tall images got stretched to 1000px wide and made theme
not movable following the mouse cursor. Now set 1000px as the
max value of width to prevent stretching and applied a max height
of 1000px to prevent the tall image to go beyond the upper and
lower frame

--- a/components/common/PicturesMagnify.module.css
+++ b/components/common/PicturesMagnify.module.css
@@ -65,7 +65,8 @@
 
 .productImageZoom {
   position: absolute;
-  width: 1000px;
+  max-width: 1000px;
+  max-height: 1000px;
 }
 
 .bottomThumbnails {
